image and spacing fixes

--- a/includes/custom/landing/_hero.pug
+++ b/includes/custom/landing/_hero.pug
@@ -3,13 +3,13 @@ include ../../../_mixins.pug
 //- .w100vw.hero-background.bg-size-cover.bg-pos-center-center(data-interchange="[../../images/custom/hero-bg-mobile.jpg, small],[../../images/custom/hero-bg-medium.jpg, medium],[../../images/custom/hero-bg-big.jpg, large]")
   .relative.wh100
     .absolute.hero-scroll.flex-container.text-white.pb2
-.hero-wrapper.text-white.h100vh.flex-container.align-center-middle.bg-size-cover.bg-pos-center-center(data-interchange="[../../images/custom/hero-bg-mobile.jpg, small],[../../images/custom/hero-bg-medium.jpg, medium],[../../images/custom/hero-bg-big.jpg, large]")
+.hero-wrapper.text-white.h100vh.flex-container.align-center-middle.bg-size-cover.bg-pos-center-center(data-interchange="[images/custom/hero-bg-mobile.jpg, small],[images/custom/hero-bg-medium.jpg, medium],[images/custom/hero-bg-big.jpg, large]")
   .grid-container.text-center.hero-content.medium-mt6
     .cell
       h1.m0.py5.medium-py6 Insights to Master the Digital Economy
     .cell.align-bottom
       p.m0.text-center Let's go
-      img.mt1.hero-icon(src="../../images/custom/arrow.svg")
+      img.mt1.hero-icon(src="images/custom/arrow.svg")
 
 //- .absolute.pos-top.pos-left.w100.h100vh.bg-size-cover.z-1(data-interchange="[../../images/custom/hero-bg-mobile.jpg, small],[../../images/custom/hero-bg-medium.jpg, medium],[../../images/custom/hero-bg-big.jpg, large]")
 //- .h100vh.text-white.text-center
