--- a/includes/custom/landing/_preview.pug
+++ b/includes/custom/landing/_preview.pug
@@ -1,6 +1,6 @@
 include ../../../_mixins.pug
 
-.relative.main-wrapper.medium-pb7.preview-container.section
+.relative.main-wrapper.medium-py7.preview-container.section
   .absolute.pos-top.pos-left.wh100.preview-background
   .grid-container.text-white.pb2
     .grid-x.grid-padding-x.small-up-1.align-left.title
