--- a/includes/custom/landing/_insights.pug
+++ b/includes/custom/landing/_insights.pug
@@ -14,7 +14,7 @@ include ../../../_mixins.pug
   linkText: "LEARN MORE"
 }
   ]
-})(class="bg-grey")
+})(class="bg-gray-lighter")
 
 +insight({
   eyebrow: "INSIGHTS",
@@ -68,4 +68,4 @@ include ../../../_mixins.pug
   linkText: "LEARN MORE"
   }
     ]
-  })(class="bg-grey")
+  })(class="bg-gray-lighter")
