--- a/includes/custom/landing/_ahead.pug
+++ b/includes/custom/landing/_ahead.pug
@@ -13,14 +13,14 @@ include ../../../_mixins.pug
       .cell
         a.button.arrow.expanded.medium-mt2(href="CHANGE_ME") READ THE REPORT
         +social-media({
-          type: 'facebook',
-          link: 'https://www.facebook.com'
+          type: 'logo-facebook',
+          link: 'https://www.facebook.com/cognizant'
         },{
-          type: 'twitter',
-          link: 'https://www.twitter.com'
+          type: 'logo-twitter-bird',
+          link: 'https://www.twitter.com/cognizant'
         },{
-          type: 'linkedin',
-          link: 'https://www.linkedin.com'
+          type: 'logo-linkedin',
+          link: 'https://www.linkedin.com/cognizant'
         })
     .cell.medium-4.medium-offset-1
       .outer-top-right.bar.relative.w100
