--- a/includes/custom/landing/_board.pug
+++ b/includes/custom/landing/_board.pug
@@ -10,31 +10,31 @@ include ../../../_mixins.pug
     .cell.medium-pt3.medium-pb3
       .grid-x.grid-padding-x
         +board-tile({
-          image: "http://www.placekitten.com/200/200",
+          image: "http://www.placehold.it/200x200",
           name: 'Paul Roehrig, Ph.D.',
           description: 'VP, Strategy & Marketing, Digital Business Founder, Center for the Future of Work',
           linkedin: 'https://linkedin.com',
           twitter: 'https://twitter.com',
         }, {
-          image: "http://www.placekitten.com/200/200",
+          image: "http://www.placehold.it/200x200",
           name: 'Ben Piring',
           description: 'Lorem Ipsum dolor Sit Amet',
           linkedin: 'https://linkedin.com',
           twitter: 'https://twitter.com'
         }, {
-          image: "http://www.placekitten.com/200/200",
+          image: "http://www.placehold.it/200x200",
           name: 'Robert Brown',
           description: 'Lorem Ipsum dolor Sit Amet',
           linkedin: 'https://linkedin.com',
           twitter: 'https://twitter.com'
         }, {
-          image: "http://www.placekitten.com/200/200",
+          image: "http://www.placehold.it/200x200",
           name: 'Euan Davis',
           description: 'AVP, Center of the Future of Work, EMEA',
           linkedin: 'https://linkedin.com',
           twitter: 'https://twitter.com'
         }, {
-          image: "http://www.placekitten.com/200/200",
+          image: "http://www.placehold.it/200x200",
           name: 'Manish Bahl',
           description: 'Lorem Ipsum dolor Sit Amet',
           linkedin: 'https://linkedin.com',
