--- a/includes/custom/landing/_regions.pug
+++ b/includes/custom/landing/_regions.pug
@@ -16,7 +16,7 @@ include ../../../_mixins.pug
             headline: "A new digital economy has emerged from a tidal wave of technological innovation.",
             url: "healthcare.html",
             buttonText: "MORE",
-            image: "http://www.placekitten.com/400/300",
+            image: "http://www.placehold.it/400x300",
           })(class='large-p0')
 
           +regions-index({
@@ -27,7 +27,7 @@ include ../../../_mixins.pug
             headline: "A new digital economy has emerged from a tidal wave of technological innovation.",
             url: "life-sciences.html",
             buttonText: "MORE",
-            image: "http://www.placekitten.com/400/300",
+            image: "http://www.placehold.it/400x300",
           })(class='large-p0')
 
           +regions-index({
@@ -38,7 +38,7 @@ include ../../../_mixins.pug
             headline: "A new digital economy has emerged from a tidal wave of technological innovation.",
             url: "healthcare.html",
             buttonText: "MORE",
-            image: "http://www.placekitten.com/400/300",
+            image: "http://www.placehold.it/400x300",
           })(class='large-p0')
 
           +regions-index({
@@ -49,5 +49,5 @@ include ../../../_mixins.pug
             headline: "A new digital economy has emerged from a tidal wave of technological innovation.",
             url: "life-sciences.html",
             buttonText: "MORE",
-            image: "http://www.placekitten.com/400/300",
+            image: "http://www.placehold.it/400x300",
           })(class='large-p0')
