--- a/scss/custom/_preview.scss
+++ b/scss/custom/_preview.scss
@@ -2,7 +2,7 @@
 
 .preview {
 	&-background {
-		background-image: linear-gradient(233deg, $blue-bright, $blue-medium);
+		background-image: linear-gradient(233deg, $blue-twa, $blue-twa-dark);
 		z-index         : -1;
 	}
 
