--- a/scss/custom/_regions.scss
+++ b/scss/custom/_regions.scss
@@ -1,5 +1,5 @@
 .regions {
 	&-background {
-		background-image: linear-gradient(233deg, #50ade1, #2784b8);
+		background-image: linear-gradient(233deg, $blue-twa, $blue-twa-dark);
 	}
 }
