--- a/scss/custom/_utils.scss
+++ b/scss/custom/_utils.scss
@@ -1,19 +1,5 @@
-.placeholder {
-	background: $gray-light;
-}
-
-.outer {
-	position: absolute;
-	left: 7em;
-	right: 7em;
-	z-index: -1;
-}
-
-.horizontal-bar {
-	width: 100%;
-	height: 24px;
-	background: red;
-}
+$blue-twa: #50ade1;
+$blue-twa-dark: #2784b8;
 
 .frame {
 	&-bar {
