--- a/_template.pug
+++ b/_template.pug
@@ -9,8 +9,7 @@ html.no-js(lang="en")
     meta(name="description" content=metaDescription)
     meta(name="keywords" content=metaKeywords)
     title!= pageTitle
-    link(rel="stylesheet" href="./css/app.css")
-    //- link(rel="stylesheet", href="css/app.css", media="screen")
+    link(rel="stylesheet", href="css/app.css", media="screen")
     //- script(defer src="js/min/app-min.js")
     //- link(rel="preload" href="css/styles.pure.css" as="style")
     //- link(rel="stylesheet" href="css/app.css" media="print" onload="this.media='all'")
