--- a/includes/custom/landing/_headline.pug
+++ b/includes/custom/landing/_headline.pug
@@ -1,4 +1,4 @@
-.headline-background.bg-blue.flex-container.text-white.large-h100vh.medium-py10.bg-size-cover(style="background: url('images/custom/headline-background.png') no-repeat;")
+.headline-background.bg-blue.flex-container.text-white.large-h100vh.py3.medium-py10.bg-size-cover(style="background: url('images/custom/headline-background.png') no-repeat;")
   .grid-container
     .grid-x.grid-padding-x.align-middle
       .cell.auto(data-aos="fade-up" data-aos-offset="50")
