--- a/includes/custom/landing/_regions.pug
+++ b/includes/custom/landing/_regions.pug
@@ -1,9 +1,9 @@
 include ../../../_mixins.pug
 
-.flex-container.align-middle.py5.regions-background
+.flex-container.align-middle.py3.regions-background
   .grid-container
     .grid-x.align-center-middle
-      .cell.pb5.medium-pb2.text-white
+      .cell.text-white
         p.mb-half.text-bold.text-spacing-1 REGIONS
         h3 The Work Ahead: Regions
       .cell
