--- a/includes/custom/landing/_preview.pug
+++ b/includes/custom/landing/_preview.pug
@@ -1,6 +1,6 @@
 include ../../../_mixins.pug
 
-.relative.main-wrapper.medium-py7.preview-container.section
+.relative.py2.medium-py7.preview-container
   .absolute.pos-top.pos-left.wh100.preview-background
   .grid-container.text-white.pb2
     .grid-x.grid-padding-x.small-up-1.align-left.title
@@ -13,7 +13,7 @@ include ../../../_mixins.pug
         .grid-x.w100.show-for-medium
           +white-bar(100)(class="preview-frame__top")
   .grid-container
-    .grid-x.grid-margin-x.small-up-1.medium-up-3.large-up-3
+    .grid-x.grid-margin-x.grid-margin-y.small-up-1.medium-up-3.large-up-3
       +preview-tiles({
         title: 'Lorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem IpsumLorem Ipsum',
         linkText: 'Link text'
@@ -24,12 +24,12 @@ include ../../../_mixins.pug
         title: 'Amet',
         linkText: 'Link text'
       })
-  .grid-container.show-for-medium.medium-my2
-    .grid-x.grid-padding-x
-      .cell.large-11.p0
-        .vertical-bar
   .grid-container
-    .grid-x.grid-margin-x.small-up-1.medium-up-3.large-up-3
+    .grid-x.grid-margin-x.grid-margin-y
+      .cell.large-11.p0
+        .vertical-bar.show-for-medium
+  .grid-container
+    .grid-x.grid-margin-x.grid-margin-y.small-up-1.medium-up-3.large-up-3
       +preview-tiles({
         title: 'Lorem Ipsum',
         linkText: 'Link text'
