--- a/includes/custom/landing/_board.pug
+++ b/includes/custom/landing/_board.pug
@@ -1,42 +1,42 @@
 include ../../../_mixins.pug
 
 
-.grid-container.pt3.pb5
-  .grid-x.grid-padding-x.align-center
+.grid-container.py2.medium-py6
+  .grid-x.grid-padding-x.grid-margin-y.align-center
     .cell.medium-10.text-center
-      p.mb-half.text-bold.text-gray.text-spacing-1 GET IN TOUCH
-      h3 Board of Directors
+      p.mb-half.text-gray.text-spacing-1 GET IN TOUCH
+      h3 Our Leadership Team
       p Follow the Center for the Future of Work for up to date research, insight and advice to help leaders make sense of the latest technologies, business models and generation of workers.
-    .cell.medium-pt3.medium-pb3
-      .grid-x.grid-padding-x
+    .cell
+      .grid-x.grid-padding-x.grid-margin-y.text-center.align-center.medium-up-3
         +board-tile({
-          image: "http://www.placehold.it/200x200",
+          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/8e6ac97432bf20799cc6376db2c707d7.png",
           name: 'Paul Roehrig, Ph.D.',
-          description: 'VP, Strategy & Marketing, Digital Business Founder, Center for the Future of Work',
-          linkedin: 'https://linkedin.com',
-          twitter: 'https://twitter.com',
+          description: 'Co-Founder - Center for the Future of Work',
+          linkedin: 'https://www.linkedin.com/in/paul-roehrig-020785',
+          twitter: 'https://twitter.com/paulroehrig',
         }, {
-          image: "http://www.placehold.it/200x200",
-          name: 'Ben Piring',
-          description: 'Lorem Ipsum dolor Sit Amet',
-          linkedin: 'https://linkedin.com',
-          twitter: 'https://twitter.com'
+          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/17d4da016e068d3d3e83ce41047b1b86.png",
+          name: 'Ben Pring',
+          description: 'VP, Head of Thought Leadership & Managing Director - Center for the Future of Work',
+          linkedin: 'https://www.linkedin.com/in/benpring',
+          twitter: 'https://twitter.com/benjaminpring'
         }, {
-          image: "http://www.placehold.it/200x200",
+          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/9d068cd8069010030f89b94630b43e5e.png",
           name: 'Robert Brown',
-          description: 'Lorem Ipsum dolor Sit Amet',
-          linkedin: 'https://linkedin.com',
-          twitter: 'https://twitter.com'
+          description: 'VP - Center for the Future of Work',
+          linkedin: 'https://www.linkedin.com/in/robthbrown',
+          twitter: 'https://twitter.com/robthbrown'
         }, {
-          image: "http://www.placehold.it/200x200",
+          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/7576aafcfa7ada3848a8fe529a81759b.png",
           name: 'Euan Davis',
-          description: 'AVP, Center of the Future of Work, EMEA',
-          linkedin: 'https://linkedin.com',
-          twitter: 'https://twitter.com'
+          description: 'AVP - Center for the Future of Work, EMEA',
+          linkedin: 'https://www.linkedin.com/in/euandavis',
+          twitter: 'https://twitter.com/euandavis'
         }, {
-          image: "http://www.placehold.it/200x200",
+          image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/9170d636a3bcd511b00a7427cf666a5f.png",
           name: 'Manish Bahl',
-          description: 'Lorem Ipsum dolor Sit Amet',
-          linkedin: 'https://linkedin.com',
-          twitter: 'https://twitter.com'
+          description: 'AVP - Center for the Future of Work, APAC',
+          linkedin: 'https://www.linkedin.com/in/manishbahl',
+          twitter: 'https://twitter.com/mbahl'
         })
