--- a/includes/custom/landing/_hero.pug
+++ b/includes/custom/landing/_hero.pug
@@ -4,9 +4,9 @@ include ../../../_mixins.pug
   .relative.wh100
     .absolute.hero-scroll.flex-container.text-white.pb2
 .hero-wrapper.text-white.h100vh.flex-container.align-center-middle.bg-size-cover.bg-pos-center-center(data-interchange="[images/custom/hero-bg-mobile.jpg, small],[images/custom/hero-bg-medium.jpg, medium],[images/custom/hero-bg-big.jpg, large]")
-  .grid-container.text-center.hero-content.medium-mt6
+  .grid-container.text-center.hero-content
     .cell
-      h1.extra-large.m0.py5.medium-py6 Insights to Master the Digital Economy
+      h1.extra-large.m0.py2.medium-py7.large-py2.xlarge-py5.large-mt4 Insights to Master the Digital Economy
     .cell.align-bottom
       p.m0.text-center Let's go
       img.mt1.hero-icon(src="images/custom/arrow.svg")
