--- a/includes/custom/landing/_insights.pug
+++ b/includes/custom/landing/_insights.pug
@@ -1,71 +1,25 @@
 include ../../../_mixins.pug
 +insight({
   eyebrow: "INSIGHTS",
-  title: "Region Insights",
-  tiles: [{
-    title: "Europe’s Digital Imperative Europe’s Digital Imperative",
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu.",
-    url: "loremipsum.html",
-    linkText: "LEARN MORE"
-}, {
-  title: "Europe’s Digital Imperative",
-  description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu.",
-  url: "loremipsum.html",
-  linkText: "LEARN MORE"
-}
-  ]
-})(class="bg-gray-lighter")
-
-+insight({
-  eyebrow: "INSIGHTS",
-  title: "Technology and Process Insights",
-  tiles: [{
-    title: "Europe’s Digital Imperative",
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu.",
-    url: "loremipsum.html",
-    linkText: "SEE TRENDS"
-}, {
-  title: "Europe’s Digital Imperative",
-  description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu.",
-  url: "loremipsum.html",
-  linkText: "GET RESEARCH"
-}
-  ]
-})
-
-+insight({
-  eyebrow: "MORE ON COGNIZANT",
-  title: "Related Reports",
-  tiles: [{
-    title: "Banking and Financial Services has a Digital Advantage",
-    description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu.",
-    url: "loremipsum.html",
-    linkText: "LEARN MORE"
-}, {
-  title: "Healthcare in Digital Age",
-  description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu.",
-  url: "loremipsum.html",
-  linkText: "LEARN MORE"
-}, {
-  title: "7 Insurance Work Trends",
-  description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu.",
-  url: "loremipsum.html",
-  linkText: "SEE TRENDS"
-}, {
-  title: "A New Era in Life Sciences",
-  description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu.",
-  url: "loremipsum.html",
-  linkText: "LEARN MORE"
-}, {
-  title: "Manufacturing’s Digital Future",
-  description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu. Suspendisse pulvinar vel ex eu scelerisque. Proin iaculis ut nulla quis faucibus.",
-  url: "loremipsum.html",
-  linkText: "EXPLORE TRENDS"
-}, {
-  title: "Media & Entertainment’s Next Phase",
-  description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu pulvinar tortor, ac accumsan ante. Pellentesque nec luctus arcu. Suspendisse pulvinar vel ex eu scelerisque. Proin iaculis ut nulla quis faucibus.",
-  url: "loremipsum.html",
-  linkText: "LEARN MORE"
-  }
-    ]
-  })(class="bg-gray-lighter")
+  title: "Battleground Reports",
+  tiles: [
+    {
+      title: " The True Meaning of AI: Action & Insight",
+      description: "The Work Ahead is a research series providing insight and guidance on how organizations are evolving to the next stage of their digital journey. In this report, we explore how C-level executives around the world are using artificial intelligence to power business success, and provide guidance on using this powerful technology to ensure a successful future for the future of work.",
+      url: "#",
+      linkText: "LEARN MORE"
+    },
+    {
+      title: " The True Meaning of AI: Action & Insight",
+      description: "The Work Ahead is a research series providing insight and guidance on how organizations are evolving to the next stage of their digital journey. In this report, we explore how C-level executives around the world are using artificial intelligence to power business success, and provide guidance on using this powerful technology to ensure a successful future for the future of work.",
+      url: "#",
+      linkText: "LEARN MORE"
+    },
+    {
+      title: " The True Meaning of AI: Action & Insight",
+      description: "The Work Ahead is a research series providing insight and guidance on how organizations are evolving to the next stage of their digital journey. In this report, we explore how C-level executives around the world are using artificial intelligence to power business success, and provide guidance on using this powerful technology to ensure a successful future for the future of work.",
+      url: "#",
+      linkText: "LEARN MORE"
+    },
+      ]
+    })(class="bg-gray-lighter")
