--- a/includes/custom/landing/_contact.pug
+++ b/includes/custom/landing/_contact.pug
@@ -1,7 +1,8 @@
-.p2.medium-p5.text-white.text-center.contact-container
-  .grid-x.grid-padding-x.align-center
+.p2.medium-p5.bg-gray-lighter
+  .grid-x.grid-padding-x.align-center-middle
     .cell.medium-6
-      h3(data-aos="fade-up" data-aos-offset="50") Contact Us
-      h5(data-aos="fade-up" data-aos-offset="50") Take the first step
-      p(data-aos="fade-up" data-aos-offset="50") Together let’s see where Cognizant Artificial Intelligence can take your organization.
-      a.button.arrow(href="CHANGE_ME" data-aos="fade-up" data-aos-offset="50") CONTACT US
+      h3 CONTINUE THE CONVERSATION FORM HERE
+      //- h3(data-aos="fade-up" data-aos-offset="50") Contact Us
+      //- h5(data-aos="fade-up" data-aos-offset="50") Take the first step
+      //- p(data-aos="fade-up" data-aos-offset="50") Together let’s see where Cognizant Artificial Intelligence can take your organization.
+      //- a.button.arrow(href="CHANGE_ME" data-aos="fade-up" data-aos-offset="50") CONTACT US
