--- a/includes/custom/landing/_text-video.pug
+++ b/includes/custom/landing/_text-video.pug
@@ -4,4 +4,4 @@
       h3.mb2.medium-mb3.text-light.text-gray We are rewriting the rules of business: AI, algorithms, big data and IoT are defining signs. Back in 2016, The Work Ahead series saw nearly 2,500 global businesses define the game and provide a roadmap.
 
       .responsive-embed.widescreen
-        iframe(width="420" height="315" src="https://www.youtube.com/embed/mM5_T-F1Yn4" frameborder="0" allowfullscreen)
+        iframe(width="420" height="315" src="https://www.youtube.com/embed/rHxrFg0Reus" frameborder="0" allowfullscreen)
