--- a/index.pug
+++ b/index.pug
@@ -9,11 +9,10 @@ block vars
 block content
   include includes/custom/landing/_hero.pug
   include includes/custom/landing/_text-video.pug
-  include includes/custom/landing/_preview.pug
-  include includes/custom/landing/_headline.pug
-  include includes/custom/landing/_ahead.pug
-  include includes/custom/landing/_regions.pug
-  include includes/custom/landing/_headline.pug
+  include includes/custom/landing/_report.pug
+  include includes/custom/landing/_stat.pug
+  include includes/custom/landing/_reports-regional.pug
+  //- include includes/custom/landing/_regions.pug
   include includes/custom/landing/_insights.pug
   include includes/custom/landing/_board.pug
   include includes/custom/landing/_contact.pug
