12-15 update. video header added, americas asset

--- a/_mixins.pug
+++ b/_mixins.pug
@@ -51,7 +51,7 @@ mixin social-media(...elements)
           a.mx-half(href=element.link)
             i(class=element.type)
 
-mixin board-tile(...elements)
+mixin team-tile(...elements)
   each element in elements
     .cell(data-aos="fade-up")
       .card.bd0.h100
