--- a/includes/custom/landing/_reports-regional.pug
+++ b/includes/custom/landing/_reports-regional.pug
@@ -23,7 +23,7 @@ include ../../../_mixins.pug
       +reports-regional({
         title: 'Report for Americas',
         linkText: 'Link text',
-        image: 'https://www.placehold.it/400x300'
+        image: 'images/twa-reports-assets/twa-report-americas.jpg'
       })(data-aos="fade-left" data-aos-offset="200")
       +reports-regional({
         title: 'Report for Europe',
