--- a/includes/custom/landing/_team.pug
+++ b/includes/custom/landing/_team.pug
@@ -8,8 +8,8 @@ include ../../../_mixins.pug
       h3 Our Leadership Team
       p Follow the Center for the Future of Work for up to date research, insight and advice to help leaders make sense of the latest technologies, business models and generation of workers.
     .cell
-      .grid-x.grid-padding-x.grid-margin-y.text-center.align-center.medium-up-2
-        +board-tile(
+      .grid-x.grid-padding-x.grid-margin-y.text-center.align-center.medium-up-4
+        +team-tile(
         {
           image: "https://www.cognizant.com/futureofwork/images/article/author2/medium/9170d636a3bcd511b00a7427cf666a5f.png",
           name: 'Manish Bahl',
