image cleanup and tweaks

--- a/includes/custom/landing/_report.pug
+++ b/includes/custom/landing/_report.pug
@@ -38,7 +38,7 @@ include ../../../_mixins.pug
         link: 'https://www.linkedin.com/cognizant'
       })
     .cell.medium-5.medium-offset-1.report-image.relative(data-aos="fade-right")
-      img.bd-blue-2.w100(src="images/Global_Codex_6154_TWA Global Report_WEB.jpg")
+      img.bd-blue-2.w100(src="images/Global_Codex_6154_TWA_Global_Report_WEB.jpg")
       .report-image-shadow
 
   // ======================================================================
