--- a/includes/custom/landing/_reports-regional.pug
+++ b/includes/custom/landing/_reports-regional.pug
@@ -23,17 +23,17 @@ include ../../../_mixins.pug
       +reports-regional({
         title: 'Report for Americas',
         linkText: 'Link text',
-        image: 'images/twa-reports-assets/twa-report-americas.jpg'
+        image: 'images/twa-report-americas.jpg'
       })(data-aos="fade-left" data-aos-offset="200")
       +reports-regional({
         title: 'Report for Europe',
         linkText: 'Link text',
-        image: 'images/twa-reports-assets/twa-report-europe.jpg'
+        image: 'images/twa-report-europe.jpg'
       })(data-aos="flip-up" data-aos-offset="200")
       +reports-regional({
         title: 'Report for APAC',
         linkText: 'Link text',
-        image: 'images/twa-reports-assets/twa-report-asia.jpg'
+        image: 'images/twa-report-asia.jpg'
       })(data-aos="fade-right" data-aos-offset="200")
 
   .grid-container
