--- a/includes/custom/landing/_hero.pug
+++ b/includes/custom/landing/_hero.pug
@@ -14,14 +14,14 @@ include ../../../_mixins.pug
       p.m0.text-center Let’s go
       img.mt1.hero-icon(src="images/arrow.svg")
 
-.hero-wrapper.text-white.h100vh.flex-container.align-center-middle.video-background(data-interchange="[images/hero-bg-mobile.jpg, small],[images/transparent.gif, medium],[images/transparent.gif, large]")
+.hero-wrapper.text-white.h100vh.flex-container.align-center-middle.video-background.bg-size-cover.bg-pos-center-center(data-interchange="[images/hero-bg-mobile.jpg, small],[images/transparent.gif, medium],[images/transparent.gif, large]")
   video.hide-for-small-only(playsinline autoplay loop muted poster="images/twa-bg-header-video.jpg")
     source(src="images/twa-bg-header-video.mp4" type="video/mp4")
     source(src="images/twa-bg-header-video.webm" type="video/webm")
     source(src="images/twa-bg-header-video.ogg" type="video/ogg")
   .grid-container.text-center.hero-content
     .grid-x.align-center
-      .cell.medium-10.flex-container.align-top(data-aos="fade-down" data-aos-delay="1800" data-aos-duration="500")
+      .cell.medium-10.flex-container.align-top.show-for-medium(data-aos="fade-down" data-aos-delay="1800" data-aos-duration="500")
         img(src="images/1px-white.gif" style="width: 1.25rem; height: 3rem;")
         img(src="images/1px-white.gif" style="width: 100%; height: 1.25rem;")
         img(src="images/1px-white.gif" style="width: 1.25rem; height: 6.25rem;")
@@ -30,10 +30,10 @@ include ../../../_mixins.pug
         h1.extra-large.m0.inline-block(data-aos="fade-right" data-aos-delay="300" data-aos-duration="750") Digital’s 
         h1.extra-large.m0.inline-block(data-aos="fade-left" data-aos-delay="600" data-aos-duration="750") Second 
         h1.extra-large.m0.inline-block(data-aos="fade-right" data-aos-delay="900" data-aos-duration="750") Wave
-      .cell.align-bottom.pt2(data-aos="fade-down" data-aos-delay="2500" data-aos-duration="500")
+      .cell.align-bottom.pt2.mbn2(data-aos="fade-down" data-aos-delay="2500" data-aos-duration="500")
         p.m0.text-center Let’s go
         img.mt1.hero-icon(src="images/arrow.svg")
-      .cell.medium-10.flex-container.align-bottom(data-aos="fade-up" data-aos-delay="1800" data-aos-duration="500")
+      .cell.medium-10.flex-container.align-bottom.show-for-medium(data-aos="fade-up" data-aos-delay="1800" data-aos-duration="500")
         img(src="images/1px-white.gif" style="width: 1.25rem; height: 6.25rem;")
         img(src="images/1px-white.gif" style="width: 100%; height: 1.25rem;")
         img(src="images/1px-white.gif" style="width: 1.25rem; height: 3rem;")
