--- a/includes/custom/landing/_contact.pug
+++ b/includes/custom/landing/_contact.pug
@@ -1,4 +1,4 @@
-.flex-container.p2.medium-p5.bg-gray.text-white.align-middle(style="height: 800px;")
+.content-visibility.flex-container.p2.medium-p5.bg-gray.text-white.align-middle(style="height: 800px;")
   .grid-x.grid-padding-x.align-center-middle
     .cell.medium-6
       h3 CONTINUE THE CONVERSATION FORM HERE
