--- a/includes/custom/landing/_regions.pug
+++ b/includes/custom/landing/_regions.pug
@@ -1,6 +1,6 @@
 include ../../../_mixins.pug
 
-.flex-container.align-middle.py3.regions-background
+.content-visibility.flex-container.align-middle.py3.regions-background
   .grid-container
     .grid-x.align-center-middle
       .cell.text-white
