--- a/includes/custom/landing/_stat.pug
+++ b/includes/custom/landing/_stat.pug
@@ -8,7 +8,7 @@
       .cell.large-5
         img.lazyload.object-fit-contain(data-sizes="auto" data-src="images/headline_numbers.svg" alt="CHANGE_ME" data-aos="fade-down" data-aos-delay="500")
 
-.bg-blue.text-white.py1.medium-py4.large-py8.bg-size-cover.bg-pos-center-center.bg-attach-fixed(style="background: url(images/hero-background-blurred.jpg);")
+.content-visibility.bg-blue.text-white.py1.medium-py4.large-py8.bg-size-cover.bg-pos-center-center.bg-attach-fixed.lazyload(style="background: url(images/hero-background-blurred.jpg);")
   .grid-container
     .grid-x.grid-padding-x.align-middle
       .cell.small-11.medium-5.text-center.medium-text-right(data-aos="fade-right")
