--- a/includes/custom/landing/_team.pug
+++ b/includes/custom/landing/_team.pug
@@ -1,7 +1,7 @@
 include ../../../_mixins.pug
 
 
-.grid-container.py2.medium-py6
+.content-visibility.grid-container.py2.medium-py6
   .grid-x.grid-padding-x.grid-margin-y.align-center
     .cell.medium-10.text-center
       p.mb-half.text-gray.text-spacing-1 GET IN TOUCH
