--- a/_template.pug
+++ b/_template.pug
@@ -9,12 +9,31 @@ html.no-js(lang="en")
     meta(name="description" content=metaDescription)
     meta(name="keywords" content=metaKeywords)
     title!= pageTitle
-    link(rel="stylesheet", href="css/app.css", media="screen")
+
+    //- ======================================================================
+    //- CSS
+    //- ======================================================================
     //- script(defer src="js/min/app-min.js")
     //- link(rel="preload" href="css/styles.pure.css" as="style")
-    //- link(rel="stylesheet" href="css/app.css" media="print" onload="this.media='all'")
+    link(rel="preload" href="css/app.css" media="print" onload="this.media='all'")
+    link(rel="stylesheet" href="css/app.css" media="screen")
+    //- link(rel="preload" href="css/app.css" as="style" onload="this.onload=null;this.rel='stylesheet'")
+    //- noscript(link rel="stylesheet" href="css/app.css")
 
-    // ==============================  FAVICONS  ==============================
+    //- ======================================================================
+    //- FONT PRELOAD
+    //- ======================================================================
+    link(rel="preload" as="font" crossorigin="anonymous" type="font/woff2" href="fonts/Cognizant-Sans/CognizantSans-Heavy.woff2")
+    link(rel="preload" as="font" crossorigin="anonymous" type="font/woff2" href="fonts/Cognizant-Sans/CognizantSans-Regular.woff2")
+    link(rel="preload" as="font" crossorigin="anonymous" type="font/woff2" href="fonts/Cognizant-Sans/CognizantSans-Bold.woff2")
+    link(rel="preload" as="font" crossorigin="anonymous" type="font/woff2" href="fonts/Cognizant-Sans/CognizantSans-Light.woff2")
+    link(rel="preload" as="font" crossorigin="anonymous" type="font/woff2" href="fonts/Cognizant-Icons-FONT/fonts/Cognizant-Icons.woff2")
+    link(rel="preload" as="font" crossorigin="anonymous" type="font/woff" href="fonts/Cognizant-Icons-FONT/fonts/Cognizant-Icons.woff")
+    link(rel="preload" as="font" crossorigin="anonymous" type="font/ttf" href="fonts/Cognizant-Icons-FONT/fonts/Cognizant-Icons.ttf")
+
+    //- ======================================================================
+    //- FAVICONS
+    //- ======================================================================
     link(rel="apple-touch-icon", sizes="180x180", href="favicons/apple-touch-icon.png")
     link(rel="icon", type="image/png", sizes="32x32", href="favicons/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="194x194", href="favicons/favicon-194x194.png")
@@ -24,7 +43,7 @@ html.no-js(lang="en")
     link(rel="mask-icon", href="favicons/safari-pinned-tab.svg", color="#0033a0")
     link(rel="shortcut icon", href="favicons/favicon.ico")
     meta(name="msapplication-TileColor", content="#0033a0")
-    meta(name="msapplication-TileImage", content="favicons/mstile-144x144.png") 
+    meta(name="msapplication-TileImage", content="favicons/mstile-144x144.png")
     meta(name="msapplication-config", content="favicons/browserconfig.xml")
     meta(name="theme-color", content="#ffffff")
 
