--- a/includes/custom/landing/_report.pug
+++ b/includes/custom/landing/_report.pug
@@ -1,6 +1,6 @@
 include ../../../_mixins.pug
 
-.ahead-container.grid-container.relative.py2.medium-py6
+.content-visibility.ahead-container.grid-container.relative.py2.medium-py6
   // ======================================================================
   // ██████   ██████  ██████  ██████  ███████ ██████
   // ██   ██ ██    ██ ██   ██ ██   ██ ██      ██   ██
@@ -10,9 +10,9 @@ include ../../../_mixins.pug
   // ======================================================================
   .grid-x.show-for-medium
     .cell.large-11.flex-container.align-top
-      img(src="images/1px-blue.gif" style="width: 1.25rem; height: 3rem;")
-      img(src="images/1px-blue.gif" style="width: 100%; height: 1.25rem;")
-      img(src="images/1px-blue.gif" style="width: 1.25rem; height: 6.25rem;")
+      img.lazyload(data-src="images/1px-blue.gif" style="width: 1.25rem; height: 3rem;")
+      img.lazyload(data-src="images/1px-blue.gif" style="width: 100%; height: 1.25rem;")
+      img.lazyload(data-src="images/1px-blue.gif" style="width: 1.25rem; height: 6.25rem;")
 
   // ================== ====================================================
   //-  ██████  ██████  ███    ██ ████████ ███████ ███    ██ ████████
@@ -38,7 +38,7 @@ include ../../../_mixins.pug
         link: 'https://www.linkedin.com/cognizant'
       })
     .cell.medium-5.medium-offset-1.report-image.relative(data-aos="fade-right")
-      img.bd-blue-2.w100(src="images/Global_Codex_6154_TWA_Global_Report_WEB.jpg")
+      img.lazyload.bd-blue-2.w100(data-src="images/Global_Codex_6154_TWA_Global_Report_WEB.jpg")
       .report-image-shadow
 
   // ======================================================================
@@ -50,6 +50,6 @@ include ../../../_mixins.pug
   // ======================================================================
   .grid-x.show-for-medium
     .cell.large-11.flex-container.align-bottom
-      img(src="images/1px-blue.gif" style="width: 1.25rem; height: 3rem;")
-      img(src="images/1px-blue.gif" style="width: 100%; height: 1.25rem;")
-      img(src="images/1px-blue.gif" style="width: 1.25rem; height: 6.25rem;")
+      img.lazyload(data-src="images/1px-blue.gif" style="width: 1.25rem; height: 3rem;")
+      img.lazyload(data-src="images/1px-blue.gif" style="width: 100%; height: 1.25rem;")
+      img.lazyload(data-src="images/1px-blue.gif" style="width: 1.25rem; height: 6.25rem;")
