--- a/includes/custom/landing/_reports-regional.pug
+++ b/includes/custom/landing/_reports-regional.pug
@@ -1,6 +1,6 @@
 include ../../../_mixins.pug
 
-.preview-background.py2.medium-py6.text-white
+.content-visibility.preview-background.py2.medium-py6.text-white
   .grid-container
     .grid-x.grid-padding-x.align-middle
       .cell.medium-5
@@ -16,8 +16,8 @@ include ../../../_mixins.pug
         // ======================================================================
         .grid-x.show-for-medium
           .cell.large-11.flex-container.align-top
-            img(src="images/1px-white.gif" style="width: 100%; height: 1.25rem;")
-            img(src="images/1px-white.gif" style="width: 1.25rem; height: 3rem;")
+            img.lazyload(data-src="images/1px-white.gif" style="width: 100%; height: 1.25rem;")
+            img.lazyload(data-src="images/1px-white.gif" style="width: 1.25rem; height: 3rem;")
   .grid-container.medium-pb1
     .grid-x.grid-margin-x.grid-margin-y.small-up-1.medium-up-3.relative
       +reports-regional({
@@ -46,6 +46,6 @@ include ../../../_mixins.pug
     // ======================================================================
     .grid-x.show-for-medium
       .cell.pr3.flex-container.align-bottom
-        img(src="images/1px-white.gif" style="width: 1.25rem; height: 3.25rem;")
-        img(src="images/1px-white.gif" style="width: 100%; height: 1.25rem;")
-        img(src="images/1px-white.gif" style="width: 1.25rem; height: 3.25rem;")
+        img.lazyload(data-src="images/1px-white.gif" style="width: 1.25rem; height: 3.25rem;")
+        img.lazyload(data-src="images/1px-white.gif" style="width: 100%; height: 1.25rem;")
+        img.lazyload(data-src="images/1px-white.gif" style="width: 1.25rem; height: 3.25rem;")
