--- a/scss/app.scss
+++ b/scss/app.scss
@@ -22,3 +22,5 @@
 // ██      ██   ██ ██   ██ ██  ██  ██ ██      ██ ███ ██ ██    ██ ██   ██ ██  ██
 // ██      ██   ██ ██   ██ ██      ██ ███████  ███ ███   ██████  ██   ██ ██   ██
 // ======================================================================
+
+@import "../node_modules/lite-youtube-embed/src/lite-yt-embed.css";
