12-18 fresh build with final layout

--- a/_mixins.pug
+++ b/_mixins.pug
@@ -32,7 +32,7 @@ mixin insights-tile(...elements)
 
 mixin insight(...elements)
   each element in elements
-    .content-visibility.py3.medium-py6&attributes(attributes)
+    .py3.medium-py6&attributes(attributes)
       .grid-container
         .grid-x.grid-padding-x.align-center-middle
           .cell
