--- a/includes/_reports-regional.pug
+++ b/includes/_reports-regional.pug
@@ -1,6 +1,6 @@
-include ../../../_mixins.pug
+include ../_mixins.pug
 
-.content-visibility.preview-background.py2.medium-py6.text-white
+.preview-background.py2.medium-py6.text-white
   .grid-container
     .grid-x.grid-padding-x.align-middle
       .cell.medium-5
