--- a/includes/_text-video.pug
+++ b/includes/_text-video.pug
@@ -1,4 +1,4 @@
-.content-visibility.grid-container.text-center.py4.medium-py6
+.grid-container.text-center.py4.medium-py6
   .grid-x 
     .cell
       h3.mb2.medium-mb3.text-light.text-gray The rise of new machines, new generations of talent and new business models based on insight and intelligence are changing the rules of competition everywhere. The Work Ahead research series is your guide to building a successful future of work 
