--- a/index.pug
+++ b/index.pug
@@ -7,14 +7,14 @@ block vars
   - var metaKeywords= "ai for business,ai solutions,artificial intelligence solutions"
 
 block content
-  include includes/custom/landing/_hero.pug
-  include includes/custom/landing/_text-video.pug
-  include includes/custom/landing/_report.pug
-  include includes/custom/landing/_stat.pug
-  include includes/custom/landing/_reports-regional.pug
-  //- include includes/custom/landing/_regions.pug
-  include includes/custom/landing/_insights.pug
-  include includes/custom/landing/_contact.pug
-  include includes/custom/landing/_team.pug
+  include includes/_hero.pug
+  include includes/_text-video.pug
+  include includes/_report.pug
+  include includes/_stat.pug
+  include includes/_reports-regional.pug
+  //- include includes/_regions.pug
+  include includes/_insights.pug
+  include includes/_contact.pug
+  include includes/_team.pug
 
 block append extraScripts
