--- a/scss/app.scss
+++ b/scss/app.scss
@@ -7,7 +7,7 @@
 // ======================================================================
 
 @import "scss/cognizant-framework-2020.scss";
-@import 'custom/index.scss';
+@import 'index.scss';
 // -----  End of FULL FRAMEWORK  ----------
 
 // ======================================================================
