--- a/includes/_contact.pug
+++ b/includes/_contact.pug
@@ -1,5 +1,5 @@
-.content-visibility.flex-container.p2.medium-p5.bg-gray.text-white.align-middle(style="height: 800px;")
-  .grid-x.grid-padding-x.align-center-middle
+.flex-container.p2.medium-p5.bg-gray.text-white.align-middle
+  .grid-x.grid-padding-x.align-center-middle.py10
     .cell.medium-6
       h3 CONTINUE THE CONVERSATION FORM HERE
       //- h3(data-aos="fade-up" data-aos-offset="50") Contact Us
