--- a/includes/_regions.pug
+++ b/includes/_regions.pug
@@ -1,6 +1,6 @@
-include ../../../_mixins.pug
+include ../_mixins.pug
 
-.content-visibility.flex-container.align-middle.py3.regions-background
+.flex-container.align-middle.py3.regions-background
   .grid-container
     .grid-x.align-center-middle
       .cell.text-white
