--- a/includes/_report.pug
+++ b/includes/_report.pug
@@ -1,6 +1,6 @@
-include ../../../_mixins.pug
+include ../_mixins.pug
 
-.content-visibility.ahead-container.grid-container.relative.py2.medium-py6
+.ahead-container.grid-container.relative.py2.medium-py6
   // ======================================================================
   // ██████   ██████  ██████  ██████  ███████ ██████
   // ██   ██ ██    ██ ██   ██ ██   ██ ██      ██   ██
