--- a/includes/_hero.pug
+++ b/includes/_hero.pug
@@ -14,7 +14,7 @@ include ../_mixins.pug
       p.m0.text-center Let’s go
       img.mt1.hero-icon(src="images/arrow.svg")
 
-.hero-wrapper.text-white.h100vh.flex-container.align-center-middle.video-background.bg-size-cover.bg-pos-center-center(data-interchange="[images/hero-bg-mobile.jpg, small],[images/transparent.gif, medium],[images/transparent.gif, large]")
+.h100vh.py4.large-py8.text-white.flex-container.align-center-middle.video-background.bg-size-cover.bg-pos-center-center(data-interchange="[images/hero-bg-mobile.jpg, small],[images/transparent.gif, medium],[images/transparent.gif, large]")
   video.hide-for-small-only(playsinline autoplay preload="auto" loop muted poster="images/twa-bg-header-video.jpg" width="1920" height="600")
     source(src="images/twa-bg-header-video.mp4" type="video/mp4")
     source(src="images/twa-bg-header-video.webm" type="video/webm")
@@ -25,10 +25,9 @@ include ../_mixins.pug
         img.lazyload(data-src="images/1px-white.gif" style="width: 1.25rem; height: 5rem;")
         img.lazyload(data-src="images/1px-white.gif" style="width: 100%; height: 1.25rem;")
         img.lazyload(data-src="images/1px-white.gif" style="width: 1.25rem; height: 5rem;")
-      .cell
+      .cell.large-10
         h1.extra-large.m0.inline-block(data-aos="fade-left" data-aos-delay="0" data-aos-duration="750") Mastering 
         h1.extra-large.m0.inline-block(data-aos="fade-right" data-aos-delay="300" data-aos-duration="750") digital 
-        br
         h1.extra-large.m0.inline-block(data-aos="fade-left" data-aos-delay="600" data-aos-duration="750") for 
         h1.extra-large.m0.inline-block(data-aos="fade-right" data-aos-delay="900" data-aos-duration="750") tomorrow
       .cell.align-bottom.pt2.mbn2(data-aos="fade-down" data-aos-delay="2500" data-aos-duration="500")
